Modified project settings

--- a/project.config
+++ b/project.config
@@ -34,3 +34,5 @@
 	pushTag = group user/Tyler (salsaparker)
 	pushSignedTag = group Devpoint-SSK-Capstone
 	pushSignedTag = group user/Tyler (salsaparker)
+[receive]
+	requireChangeId = true
