Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,21 +1,35 @@
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
+	owner = group Devpoint-SSK-Capstone
 	owner = group user/Tyler (salsaparker)
 [access "refs/for/refs/*"]
+	read = group Devpoint-SSK-Capstone
 	read = group user/Tyler (salsaparker)
 	push = group user/Tyler (salsaparker)
+	label-Code-Review = -2..+2 group Devpoint-SSK-Capstone
 	label-Code-Review = -2..+2 group user/Tyler (salsaparker)
+	label-Verified = -1..+1 group Devpoint-SSK-Capstone
 	label-Verified = -1..+1 group user/Tyler (salsaparker)
+	rebase = group Devpoint-SSK-Capstone
 	rebase = group user/Tyler (salsaparker)
+	removeReviewer = group Devpoint-SSK-Capstone
 	removeReviewer = group user/Tyler (salsaparker)
+	submit = group Devpoint-SSK-Capstone
 	submit = group user/Tyler (salsaparker)
 [access "refs/heads/*"]
+	read = group Devpoint-SSK-Capstone
 	read = group user/Tyler (salsaparker)
+	create = group Devpoint-SSK-Capstone
 	create = group user/Tyler (salsaparker)
+	push = group Devpoint-SSK-Capstone
 	push = +force group user/Tyler (salsaparker)
+	pushMerge = group Devpoint-SSK-Capstone
 	pushMerge = group user/Tyler (salsaparker)
 [access "refs/tags/*"]
+	push = group Devpoint-SSK-Capstone
 	push = +force group user/Tyler (salsaparker)
+	pushTag = group Devpoint-SSK-Capstone
 	pushTag = group user/Tyler (salsaparker)
+	pushSignedTag = group Devpoint-SSK-Capstone
 	pushSignedTag = group user/Tyler (salsaparker)
