Modify access rules

--- a/project.config
+++ b/project.config
@@ -6,6 +6,7 @@
 [access "refs/for/refs/*"]
 	read = group Devpoint-SSK-Capstone
 	read = group user/Tyler (salsaparker)
+	push = group Devpoint-SSK-Capstone
 	push = group user/Tyler (salsaparker)
 	label-Code-Review = -2..+2 group Devpoint-SSK-Capstone
 	label-Code-Review = -2..+2 group user/Tyler (salsaparker)
